[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
lazy_static = "1.4.0"
memoize = "0.4.1"
pcre2 = "0.2.6"
regex = "1.10.2"

[workspace]
resolver = "2"
members = [
    "day01",
    "day02",
    "day03",
    "day04",
    "day05",
    "day06",
    "day07",
    "day08",
    "day09",
    "day10",
    "day11",
    "day12",
    "day13",
    "day14",
    "day15",
]

[profile.release]
opt-level = 3
